fix maron editor z-index

--- a/src/client/asset/style/me-theme/variable.scss
+++ b/src/client/asset/style/me-theme/variable.scss
@@ -2,3 +2,7 @@
   overflow-y: auto;
   border-right: 1px solid #e0e0e0;;
 }
+
+div.v-note-wrapper {
+  z-index: 1;
+}
